<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exchange">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        android:textSize="24sp"
        android:textColor="@color/primary_text"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount"
            android:textSize="15sp"
            android:layout_margin="20dp"
            />

        <EditText
            android:id="@+id/currency_to_be_converted"
            android:inputType = "number"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/Enter" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_currency"
            android:textSize="15sp"
            android:layout_margin="20dp"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >

            <Spinner
                android:id="@+id/from"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_currency"
            android:textSize="15sp"
            android:layout_margin="20dp"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >

            <Spinner
                android:id="@+id/to"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:text="@string/convert"
        android:textColor="@color/primary_text" />

    <EditText
        android:id="@+id/currency_converted"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/result" />
</LinearLayout>