<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:layout_editor_absoluteY="81dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageLayout"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageViewFlag"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="5dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

        </ImageView>

        <ImageView
            android:id="@+id/imageViewMap"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

        </ImageView>
    </RelativeLayout>


    <!-- ______________ CountryName ______________ -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/countryName"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLayout"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:id="@+id/textViewCountryName"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/countryName"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageLayout"
        tools:ignore="MissingConstraints">
    </TextView>
    <!-- ______________ CountryName ______________ -->


    <!-- ______________ Population ______________ -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text="@string/population"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:id="@+id/textViewPopulation"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="left"
        android:text="@string/population"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewCountryName"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/textViewPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text="@string/people"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textViewPopulation"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">
    </TextView>
    <!-- ______________ Population ______________ -->



    <!-- ______________ AreaInSqKm ______________ -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text="@string/areaInSqKm"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:id="@+id/textViewAreaInSqKm"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="left"
        android:text="@string/areaInSqKm"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewPopulation"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/textViewKm2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/Km2"
        app:layout_constraintStart_toEndOf="@+id/textViewAreaInSqKm"
        app:layout_constraintTop_toBottomOf="@+id/textViewPopulation"
        tools:ignore="MissingConstraints">
    </TextView>
    <!-- ______________ AreaInSqKm ______________ -->



    <!-- ______________ Capital ______________ -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text="@string/capital"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:id="@+id/textViewCapital"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="left"
        android:text="@string/capital"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewAreaInSqKm"
        tools:ignore="MissingConstraints">
    </TextView>
    <!-- ______________ Capital ______________ -->



</androidx.constraintlayout.widget.ConstraintLayout>